[tool.poetry]
name = "pinup"
version = "0.1.0"
description = ""
authors = ["Sebastian Yaghoubi <sebastianyaghoubi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ruff = "^0.11.2"

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
