[project]
name = "pinup"
version = "0.1.0"
description = "Keep pinned package versions in your Containerfiles (Dockerfiles) up-to-date"
authors = [
  { name = "Sebastian Yaghoubi", email = "sebastianyaghoubi@gmail.com" },
]
requires-python = ">=3.13"
dependencies = ["docker>=7.1.0"]

[dependency-groups]
dev = ["pytest>=8.3.5"]
lint = ["ruff>=0.11.2"]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = []
